-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u112, 9
-
Component/s: javafx
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8160871 | 8u112 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b03 |
Web View cannot render CSS background image with SVG data like:
background-image: url('data:image/svg+xml;charset=utf8, ...') is not rendered
background-image: url('data:image/svg+xml;charset=utf8, ...') is not rendered
- backported by
-
JDK-8160871 WebView cannot render CSS background image with SVG data
-
- Resolved
-
- duplicates
-
JDK-8160981 Logos and/or menu items are not rendered on many websites
-
- Closed
-
-
JDK-8160265 WebView does not render site menu items for Apple.com
-
- Closed
-
-
JDK-8159701 [Linux] WebView can't display load burmese and sinhalese under a certain case
-
- Closed
-
- relates to
-
JDK-8162949 [WebView] WebView can't display social network icons on wellsfargo.com
-
- Resolved
-
-
JDK-8165173 canvas/philip/tests/2d.path.clip.empty.html fails with 8u112
-
- Resolved
-
(1 relates to)