8160260: WebView cannot render CSS background image with SVG data

Reviewed-by: ghb, azvegint, mbilla